--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -104,8 +104,9 @@
     <string name="telegram">Telegram</string>
     <string name="hint_telegram">(Telegram Account)</string>
     <string name="error_telegram">Telegram account formatted incorrectly</string>
-    <string name="security_pb">Security question</string>
-    <string name="hint_security_pb">(Please enter the favorite country)</string>
+    <string name="security_pb">Security Question</string>
+    <string name="security_answer">Answer</string>
+    <string name="hint_security_answer">(Please enter your answer)</string>
     <string name="real_name">Full name</string>
     <string name="income_source">Source Of Income</string>
     <string name="identity_type">Valid ID Type</string>
