--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -105,7 +105,8 @@
     <string name="hint_telegram">(请输入Telegram账号)</string>
     <string name="error_telegram">Telegram账号格式错误</string>
     <string name="security_pb">安全问题</string>
-    <string name="hint_security_pb">(请输入最爱的国家)</string>
+    <string name="security_answer">回答</string>
+    <string name="hint_security_answer">(请输入你的回答)</string>
     <string name="real_name">真实姓名</string>
     <string name="income_source">薪资来源</string>
     <string name="identity_type">证件类型</string>
