--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -657,7 +657,7 @@
     <string name="bet_info_accept_odds_change">Accept changes</string>
     <string name="bet_info_add_to_bet_info">Add to bet slip</string>
     <string name="bet_info_odd_content_changed">One or more options for odds, concede. Points or score has changed</string>
-    <string name="bet_info_odd_content_changed2">The odds have changed, %1$s to %1$s </string>
+    <string name="bet_info_odd_content_changed2">The odds have changed, %1$s to %2$s </string>
 
     <string name="bet_info_all_bet">Total Bets</string>
     <string name="bet_list_delete_all">Delete all</string>
@@ -1239,4 +1239,15 @@
     <string name="redenvelope_amount_sub">Lucky Money Amount ：</string>
     <string name="tran_type_sub">Type：</string>
     <string name="btn_sure">Confirm</string>
+
+    <!--region 20220714 新版投注單-->
+    <string name="bet_stake">Stake</string>
+    <string name="total_capital">Total Stake</string>
+    <string name="total_win_amount">Total Win</string>
+    <string name="delete_bet">Delete</string>
+    <string name="btn_login_bet">Log in to Bet</string>
+    <string name="confirm_single_bets">Confirm %d Single Bets</string>
+    <string name="confirm_multiple_bets">Confirm %d Multiple Bets</string>
+    <!--endregion-->
+
 </resources>
