--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -647,7 +647,7 @@
     <string name="bet_info_accept_odds_change">Chấp nhận thay đối</string>
     <string name="bet_info_add_to_bet_info">Thêm vào đơn ca cược</string>
     <string name="bet_info_odd_content_changed">Tỷ lệ cược của một hoặc nhiều lựa chọn, điểm chấp hoặc điểm số đã được thay đổi</string>
-    <string name="bet_info_odd_content_changed2">Tỷ lệ cược đã thay đổi, %s thành %s</string>
+    <string name="bet_info_odd_content_changed2">Tỷ lệ cược đã thay đổi, %1$s thành %2$s</string>
     <string name="bet_info_all_bet">Tất cả các cược</string>
     <string name="bet_list_delete_all">Xóa tất cả</string>
     <string name="bet_list_single_warn">(Có thể sử dụng cùng số tiền đặt cược để thực hiện tất cả các lựa chọn riêng lẻ)</string>
@@ -1227,4 +1227,15 @@
     <string name="redenvelope_amount_sub">Số tiền nhận thực tế：</string>
     <string name="tran_type_sub">Loại giao dịch：</string>
     <string name="btn_sure">Xác nhận</string>
+
+    <!--region 20220714 新版投注單-->
+    <string name="bet_stake">Tiền Cược</string>
+    <string name="total_capital">Tổng tiền đặt cược</string>
+    <string name="total_win_amount">Tổng Số tiền có thể thắng</string>
+    <string name="delete_bet">Xóa bỏ</string>
+    <string name="btn_login_bet">Đăng nhập để đặt cược</string>
+    <string name="confirm_single_bets">Xác nhận %d Cược đơn</string>
+    <string name="confirm_multiple_bets">Xác nhận %d Cược xâu</string>
+    <!--endregion-->
+
 </resources>
