[新增] 新版宣傳頁 - 優惠活動清單雛形(缺少互動事件)

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1239,4 +1239,6 @@
     <string name="redenvelope_amount_sub">Lucky Money Amount ：</string>
     <string name="tran_type_sub">Type：</string>
     <string name="btn_sure">Confirm</string>
+
+    <string name="more_info">MORE INFO</string>
 </resources>
