--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1243,4 +1243,6 @@
     <string name="tran_type_sub">Type：</string>
     <string name="btn_sure">Confirm</string>
 
+    <string name="more_info">MORE INFO</string>
+
 </resources>
