[新增] 新版宣傳頁 - 遊戲菜單Tab

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1241,4 +1241,7 @@
     <string name="btn_sure">Confirm</string>
 
     <string name="more_info">MORE INFO</string>
+    <string name="e_game">E-game</string>
+    <string name="casino">Casino</string>
+    <string name="sabong">Sabong</string>
 </resources>
