--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1244,5 +1244,8 @@
     <string name="btn_sure">Confirm</string>
 
     <string name="more_info">MORE INFO</string>
+    <string name="e_game">E-game</string>
+    <string name="casino">Casino</string>
+    <string name="sabong">Sabong</string>
 
 </resources>
