--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1240,6 +1240,8 @@
     <string name="tran_type_sub">Type：</string>
     <string name="btn_sure">Confirm</string>
 
+    <string name="publicity_contact">Contact</string>
+    <string name="publicity_faqs">FAQs</string>
     <string name="more_info">MORE INFO</string>
     <string name="e_game">E-game</string>
     <string name="casino">Casino</string>
