--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1228,6 +1228,8 @@
     <string name="tran_type_sub">Loại giao dịch：</string>
     <string name="btn_sure">Xác nhận</string>
 
+    <string name="publicity_contact">lLiên hệ</string>
+    <string name="publicity_faqs">FAQs</string>
     <string name="more_info">Hơn Thông Tin</string>
     <string name="e_game">Cờ vua</string>
     <string name="casino">Casino</string>
