[feature] BetButton 加入 `移除已關閉的選項` 按鈕 (目前僅注單的串關tab會顯示)

--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1236,6 +1236,7 @@
     <string name="btn_login_bet">Đăng nhập để đặt cược</string>
     <string name="confirm_single_bets">Xác nhận %d Cược đơn</string>
     <string name="confirm_multiple_bets">Xác nhận %d Cược xâu</string>
+    <string name="btn_remove_closed_selections">Xóa cược đã đóng</string>
     <!--endregion-->
 
 </resources>
