--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1250,6 +1250,7 @@
     <string name="btn_login_bet">登录并投注</string>
     <string name="confirm_single_bets">确认%d单注投注</string>
     <string name="confirm_multiple_bets">确认%d串关投注</string>
+    <string name="btn_remove_closed_selections">移除已关闭的选项</string>
     <!--endregion-->
 
 </resources>
