[feature] 注單輸入匡如果輸入0，原錯誤提示的位置要顯示 `請輸入正確投注額`

--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1237,6 +1237,7 @@
     <string name="confirm_single_bets">Xác nhận %d Cược đơn</string>
     <string name="confirm_multiple_bets">Xác nhận %d Cược xâu</string>
     <string name="btn_remove_closed_selections">Xóa cược đã đóng</string>
+    <string name="please_enter_correct_amount">Vui lòng nhập số tiền đặt cược chính xác</string>
     <!--endregion-->
 
 </resources>
