--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1253,6 +1253,7 @@
     <string name="confirm_single_bets">Confirm %d Single Bets</string>
     <string name="confirm_multiple_bets">Confirm %d Multiple Bets</string>
     <string name="btn_remove_closed_selections">Remove closed selections</string>
+    <string name="please_enter_correct_amount">Please enter the correct bet amount</string>
     <!--endregion-->
 
 </resources>
