--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -527,6 +527,8 @@
     <string name="bank_card">Bank card</string>
     <string name="crypto">USDT</string>
     <string name="ewallet">eWallet</string>
+    <string name="withdraw_betting_station_type">Outlets Reserve</string>
+
     <string name="currency_protocol">agreement/currency</string>
     <string name="select_crypto_address">Address</string>
     <string name="withdraw_number">Withdraw</string>
@@ -666,6 +668,7 @@
     <string name="recharge_channel_gcash">Gcash</string>
     <string name="recharge_channel_grabpay">Grabpay</string>
     <string name="recharge_channel_paymaya">Maya</string>
+    <string name="recharge_betting_station_type">Outlets Reserve</string>
     <string name="recharge_channel_admin">Manual Deposit</string>
     <string name="recharge_log_order_time">Time</string>
     <string name="recharge_log_recharge_amount">Amount</string>
