--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -37,7 +37,7 @@
     <string name="sign_up_know">立即注册</string>
     <string name="recommend_code">推荐代码</string>
     <string name="hint_recommend_code">(请输入推荐代码)</string>
-    <string name="error_recommend_code">推荐码不存在</string>
+    <string name="error_recommend_code">没有该投注站，请确认代码</string>
     <string name="member_account">会员账号</string>
     <string name="hint_member_account">(长度需4–16个字符含英数)</string>
     <string name="error_member_account">账号为4~16位数字字母组合</string>
